k8s/eks/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: posts-app
  labels:
    app.kubernetes.io/part-of: posts-backend-api
