k8s/eks/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace: posts-app
spec:
  restartPolicy: Never
  containers:
    - name: load-generator
      image: busybox:1.36
      command:
        - /bin/sh
        - -c
        - |
          while true; do
            wget -q -O- http://posts-backend-service/api/posts;
          done
