k8s/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-backend-service
  namespace: posts-app
spec:
  type: ClusterIP
  selector:
    app: posts-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: posts-app
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
